<resources>
    <string name="app_name">mopiCamera</string>
    <string name="select_photo">选图</string>
    <string name="setting_paint">画笔</string>
    <string name="setting_width">宽度</string>
    <string name="setting_alpha">透明度</string>
    <string name="setting_color">颜色</string>
    <string name="setting_eraser">橡皮</string>
    <string name="setting_r">R</string>
    <string name="setting_g">G</string>
    <string name="setting_b">B</string>
    <string name="setting_save">保存</string>
    <string name="setting_restore">恢复默认值</string>
    <string name="setting_save_success">保存成功</string>

    <string name="mopi_activity_clean">轻洁</string>
    <string name="mopi_activity_deep_clean">深层</string>
    <string name="mopi_activity_eraser">橡皮</string>
    <string name="mopi_activity_save_success">保存成功</string>
    <string name="mopi_activity_save_fail">保存失败，请重新保存</string>
</resources>
