<?xml version="1.0" encoding="utf-8"?>
<com.meitu.mopicamera.view.MoPiSetttingView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/setting_padding"
    tools:context="com.meitu.mopicamera.activity.SettingActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/setting_title_tv_size"
        android:text="@string/setting_paint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/setting_margin_top"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/setting_tv_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/setting_title_tv_value_size"
            android:text="@string/setting_width"/>
        <TextView
            android:layout_width="@dimen/setting_tv_value_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/setting_title_tv_value_size"
            android:id="@+id/tv_paint_width_value"
            />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:id="@+id/sb_paint_width_value"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/setting_margin_top"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/setting_tv_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/setting_title_tv_value_size"
            android:text="@string/setting_alpha"/>
        <TextView
            android:layout_width="@dimen/setting_tv_value_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/setting_title_tv_value_size"
            android:id="@+id/tv_paint_alpha_value"
            />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:id="@+id/sb_paint_alpha_value"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/setting_margin_top"
        >
        <TextView
            android:layout_width="@dimen/setting_tv_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:id="@+id/tv_paint_color"
            android:text="@string/setting_color"/>
        <ImageView
            android:layout_width="@dimen/setting_iv_width"
            android:layout_height="@dimen/setting_iv_width"
            android:layout_below="@id/tv_paint_color"
            android:id="@+id/iv_paint"
            android:background="@color/colorPrimary"
            />
        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_paint_color">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_paint_color_R"
                android:text="@string/setting_r"/>
            <TextView
                android:layout_width="@dimen/setting_tv_value_width"
                android:layout_height="wrap_content"
                android:id="@+id/tv_paint_color_R_value"
                android:layout_toRightOf="@id/tv_paint_color_R"
                />
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_paint_color_R_value"
                android:id="@+id/sb_paint_color_R"
                android:max="255"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_paint_color_R"
                android:id="@+id/tv_paint_color_G"
                android:text="@string/setting_g"/>
            <TextView
                android:layout_width="@dimen/setting_tv_value_width"
                android:layout_height="wrap_content"
                android:id="@+id/tv_paint_color_G_value"
                android:layout_toRightOf="@id/tv_paint_color_G"
                android:layout_below="@id/tv_paint_color_R_value"
                />
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_paint_color_G_value"
                android:layout_below="@id/sb_paint_color_R"
                android:id="@+id/sb_paint_color_G"
                android:max="255"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_paint_color_G"
                android:id="@+id/tv_paint_color_B"
                android:text="@string/setting_b"/>
            <TextView
                android:layout_width="@dimen/setting_tv_value_width"
                android:layout_height="wrap_content"
                android:id="@+id/tv_paint_color_B_value"
                android:layout_toRightOf="@id/tv_paint_color_B"
                android:layout_below="@id/tv_paint_color_G_value"
                />
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_paint_color_B_value"
                android:layout_below="@id/sb_paint_color_G"
                android:id="@+id/sb_paint_color_B"
                android:max="255"
                />

        </RelativeLayout>

    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/setting_title_tv_size"
        android:layout_marginTop="@dimen/setting_title_margin_top"
        android:text="@string/setting_eraser"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/setting_margin_top"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/setting_tv_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/setting_title_tv_value_size"
            android:text="@string/setting_width"/>
        <TextView
            android:layout_width="@dimen/setting_tv_value_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/setting_title_tv_value_size"
            android:id="@+id/tv_eraser_width_value"
            />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:id="@+id/sb_eraser_width_value"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/setting_margin_top"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/setting_tv_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/setting_title_tv_value_size"
            android:text="@string/setting_alpha"/>
        <TextView
            android:layout_width="@dimen/setting_tv_value_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/setting_title_tv_value_size"
            android:id="@+id/tv_eraser_alpha_value"
            />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:id="@+id/sb_eraser_alpha_value"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/setting_margin_top"
        >
        <TextView
            android:layout_width="@dimen/setting_tv_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:id="@+id/tv_eraser_color"
            android:textSize="@dimen/setting_title_tv_value_size"
            android:text="@string/setting_color"/>
        <ImageView
            android:layout_width="@dimen/setting_iv_width"
            android:layout_height="@dimen/setting_iv_width"
            android:layout_below="@id/tv_eraser_color"
            android:id="@+id/iv_eraser"
            android:background="@color/colorPrimary"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_eraser_color">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_eraser_color_R"
                android:text="@string/setting_r"/>
            <TextView
                android:layout_width="@dimen/setting_tv_value_width"
                android:layout_height="wrap_content"
                android:id="@+id/tv_eraser_color_R_value"
                android:layout_toRightOf="@id/tv_eraser_color_R"
                />
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_eraser_color_R_value"
                android:id="@+id/sb_eraser_color_R"
                android:max="255"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_eraser_color_R"
                android:id="@+id/tv_eraser_color_G"
                android:text="@string/setting_g"/>
            <TextView
                android:layout_width="@dimen/setting_tv_value_width"
                android:layout_height="wrap_content"
                android:id="@+id/tv_eraser_color_G_value"
                android:layout_toRightOf="@id/tv_eraser_color_G"
                android:layout_below="@id/tv_eraser_color_R_value"
                />
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_eraser_color_G_value"
                android:layout_below="@id/sb_eraser_color_R"
                android:id="@+id/sb_eraser_color_G"
                android:max="255"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_eraser_color_G"
                android:id="@+id/tv_eraser_color_B"
                android:text="@string/setting_b"/>
            <TextView
                android:layout_width="@dimen/setting_tv_value_width"
                android:layout_height="wrap_content"
                android:id="@+id/tv_eraser_color_B_value"
                android:layout_toRightOf="@id/tv_eraser_color_B"
                android:layout_below="@id/tv_eraser_color_G_value"
                />
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_eraser_color_B_value"
                android:layout_below="@id/sb_eraser_color_G"
                android:id="@+id/sb_eraser_color_B"
                android:max="255"
                />

        </RelativeLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/setting_title_margin_top">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_restore"
            android:id="@+id/btn_setting_restore"
            android:layout_alignParentLeft="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_save"
            android:id="@+id/btn_setting_save"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

</com.meitu.mopicamera.view.MoPiSetttingView>
