<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/mopi_activity_save_menu_height"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/ll_bottom_menu">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="@dimen/mopi_activity_save_menu_height"
                android:layout_height="wrap_content"
                android:id="@+id/activity_cancel"
                android:layout_alignParentLeft="true"
                android:background="@mipmap/cancel"/>
            <Button
                android:layout_width="@dimen/mopi_activity_save_menu_height"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/activity_save"
                android:background="@mipmap/save"/>
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/mopi_activity_paint_menu_height"
        android:id="@+id/rl_mo_pi_operate_menu"
        android:layout_above="@id/ll_bottom_menu">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ll_mo_pi_operate_menu"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/mopi_activity_rg_margin_left"
                android:id="@+id/rg_paint_mode">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/rb_clean"
                    android:checked="true"
                    android:button="@null"
                    android:background="@android:color/transparent"
                    android:textSize="@dimen/mopi_activity_radio_size"
                    android:textColor="@drawable/radio_color"
                    android:text="@string/mopi_activity_clean"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_deep_clean"
                    android:button="@null"
                    android:background="@android:color/transparent"
                    android:textColor="@drawable/radio_color"
                    android:textSize="@dimen/mopi_activity_radio_size"
                    android:layout_marginLeft="@dimen/mopi_activity_radio_margin"
                    android:text="@string/mopi_activity_deep_clean"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_eraser"
                    android:button="@null"
                    android:background="@android:color/transparent"
                    android:textColor="@drawable/radio_color"
                    android:textSize="@dimen/mopi_activity_radio_size"
                    android:layout_marginLeft="@dimen/mopi_activity_radio_margin"
                    android:text="@string/mopi_activity_eraser"/>
            </RadioGroup>
            <Button
                android:layout_width="@dimen/mopi_activity_withdraw_width"
                android:layout_height="@dimen/mopi_activity_withdraw_height"
                android:id="@+id/btn_withdraw"
                android:layout_marginLeft="@dimen/mopi_activity_radio_margin"
                android:background="@drawable/mopi_withdraw_btn"/>

        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_setting"
            android:layout_alignParentRight="true"
            android:text="设置"/>
    </RelativeLayout>

    <com.meitu.mopicamera.view.MoPiFunctionImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/iv_mo_pi_view"
        android:layout_above="@id/rl_mo_pi_operate_menu"
        />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pb_mopi_activity"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

</RelativeLayout>

